--- a/assets/css/setup-wizard.css
+++ b/assets/css/setup-wizard.css
@@ -208,10 +208,9 @@
 
 /* Your logo */
 
-.wpo-setup-input #logo-preview {
+.wpo-setup-input #img-header_logo {
 	width:100%;
-	height:200px;
-	border:1px solid #3e9b9a;
+	height:auto;
 	background:#fdfdfd;
 	margin-bottom:20px;
 	padding:20px;
@@ -226,40 +225,6 @@
 	-ms-transform: 			translate(-50%, 0%); /* IE 9 */
     -webkit-transform: 		translate(-50%, 0%); /* Safari */
     transform: 				translate(-50%, 0%);
-}
-
-.wpo-setup-input .set-image-box {
-	width:160px;
-	height:40px;
-	overflow:hidden;
-	position:relative;
-	float:right;
-}
-
-.wpo-setup-input .set-image {
-	border:1px solid #3e9b9a;
-	width:160px;
-	height:40px;
-	right:0;
-	position:absolute;
-	opacity:0;
-}
-
-.wpo-setup-input .set-image-btn {
-	background-color:#3e9b9a;
-	color:#fdfdfd;
-	text-align:center;
-	width:160px;
-	height:40px;
-	right:0;
-	position:absolute;
-	border-radius:5px;
-	font-size:1.4em;
-	line-height:40px;
-}
-
-.wpo-setup-input .set-image-box:hover .wpo-setup-input .set-image-btn {
-	background-color:#f00;
 }
 
 /* Attach to */
