--- a/assets/css/order-styles.css
+++ b/assets/css/order-styles.css
@@ -14,9 +14,10 @@
 .wpo_wcpdf-actions a.button.exists::after {
 	font-family: Dashicons;
 	content: "\f147";
-	font-size:16px;
-	margin-left:4px;
-	color:#2aad2a;
+	font-size: 16px;
+	margin-left: 4px;
+	color: #2aad2a;
+	vertical-align: middle;
 }
 
 .type-shop_order .column-wc_actions a.button.wpo_wcpdf img,
