Revert "Add action hook to invoice in the PDF Invoice data meta box: wpo_wcpdf_document_actions"
This reverts commit fd7cb051d6f9b7baab6e9e8140a5706e8b2def61.

--- a/assets/css/order-styles.css
+++ b/assets/css/order-styles.css
@@ -68,14 +68,12 @@
 }
 
 .dashicons-edit,
-.dashicons-trash,
-.dashicons-update-alt {
+.dashicons-trash {
 	opacity:0.5;
 }
 
 .dashicons-edit:hover,
-.dashicons-trash:hover,
-.dashicons-update-alt:hover {
+.dashicons-trash:hover {
 	opacity:1;
 	cursor:pointer;
 }
