--- a/assets/css/order-styles.css
+++ b/assets/css/order-styles.css
@@ -80,7 +80,7 @@
 	cursor:pointer;
 }
 
-.wcpdf-data-fields h4 .spin {
+.wcpdf-data-fields h4 .wcpdf-regenerate-spin {
 	opacity: 1;
  	-webkit-animation: spin 1.6s linear infinite; /* Safari */
  	animation: spin 1.6s linear infinite;
@@ -88,12 +88,12 @@
 }
 
 /* Safari */
-@-webkit-keyframes spin {
+@-webkit-keyframes wcpdf-regenerate-spin {
 	0% { -webkit-transform: rotate(0deg); }
 	100% { -webkit-transform: rotate(-360deg); }
 }
 
-@keyframes spin {
+@keyframes wcpdf-regenerate-spin {
 	0% { transform: rotate(0deg); }
 	100% { transform: rotate(-360deg); }
 }
