--- a/templates/Simple/style.css
+++ b/templates/Simple/style.css
@@ -100,7 +100,7 @@ table.head {
 }
 
 td.header img {
-	max-height: 3cm; /* overriden by the settings by default */
+	max-height: 3cm; /* may be overriden by the settings */
 	width: auto;
 }
 
