Force 'td.order-data table th' column to have half the width of the parent table

--- a/templates/Simple/style.css
+++ b/templates/Simple/style.css
@@ -127,17 +127,22 @@ td.order-data {
 	width: 40%;
 }
 
+td.order-data table {
+	width: 100%;
+}
+
+td.order-data table th {
+	font-weight: normal;
+	padding-right: 2mm;
+	width: 50%;
+}
+
 .invoice .shipping-address {
 	width: 30%;
 }
 
 .packing-slip .billing-address {
 	width: 30%;
-}
-
-td.order-data table th {
-	font-weight: normal;
-	padding-right: 2mm;
 }
 
 /* Order details */
