Separate number and date saving from notes
https://github.com/wpovernight/woocommerce-pdf-invoices-packing-slips/pull/175#discussion_r623292873

--- a/assets/css/order-styles.css
+++ b/assets/css/order-styles.css
@@ -76,7 +76,8 @@
 	display:block;
 }
 
-.wcpdf-data-fields .editable {
+.wcpdf-data-fields .editable,
+.wcpdf-data-fields .editable-notes {
 	height:auto;
 	display:none;
 }
